cmake_minimum_required(VERSION 3.23)
project(prj)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(prj
        01_subset_sum_bf.cpp
        02_subset_sum_bt.cpp
        03_subset_sum_memo.cpp
        04_subset_sum_tabulation.cpp
        big_number.cpp
        bitset_.cpp
        bstEx.cpp
        chap1_01_std_array.cpp
        chap1_01_std_array_ex1.cpp
        chap1_01_std_array_ex2.cpp
        chap1_02_std_vector.cpp
        chap1_03_std_forward_list.cpp
        chap1_03_std_forward_list_ex1.cpp
        chap1_04_iterator_ex1.cpp
        chap1_04_iterator_usercontainer.cpp
        chap1_05_std_list.cpp
        chap1_06_std_deque.cpp
        chap2_01_tree.cpp
        chap2_02_BST.cpp
        chap2_03_heap.cpp
        chap2_04_adj_list_graph.cpp
        chap2_04_adj_matrix_graph.cpp
        chap3_01_1_Hash.cpp
        chap3_01_2_chaining.cpp
        chap3_01_3_cuckoo_hashing.cpp
        chap3_02_STL_hash.cpp
        chap3_03_bloom_filter.cpp
        chap4_01_bin_search.cpp
        chap4_02_merge_sorting.cpp
        chap4_03_quick_sorting.cpp
        chap4_04_Linear_time_selection.cpp
        chap4_05_map_reduce.cpp
        chap5_01_shortest_scheduling.cpp
        chap5_02_fractional_knapsack_problem.cpp
        chap5_03_kruskal_minimum_spanning_tree.cpp
        chap5_04_graph_coloring.cpp
        chap5_ex_welsh-powell.cpp
        chap6_01_1_BFS.cpp
        chap6_01_2_DFS.cpp
        chap6_02_prim.cpp
        chap6_03_dijkstra.cpp
        chap7_01_bellman_ford.cpp
        chapter1.h
        chapter2.h
        chapter3.h
        chapter4.h
        chapter5.h
        chapter6.h
        chapter7.h
        chapter8.h
        copy_constructor.cpp
        data_structure.h
        dijkstra_ex1.cpp
        dijkstra_ex2.cpp
        dijl_to_fw.cpp
        disjoint_set.cpp
        disjoint_set.h
        double_linkedlist.cpp
        ds.h
        Ex.h
        ex1.cpp
        ex2.cpp
        ex3.cpp
        ex4.cpp
        Floyd_warshall.cpp
        friendEx.cpp
        graph_and_edge.h
        grp.cpp
        IO.cpp
        kruskal_mst.cpp
        Label.h
        linked_list.cpp
        Linked_Stack.cpp
        list0.cpp
        list1.cpp
        list2.cpp
        list3.cpp
        main.cpp
        operator_overloading.cpp
        operator_overloading2.cpp
        rand_int_chrono.cpp
        ringbuffer.cpp
        set_.cpp
        treeEx.cpp)
