cmake_minimum_required(VERSION 3.23)
project(Algorithm_Session)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm_Session
        boj_1004.cpp
        boj_1010.cpp
        boj_1012.cpp
        boj_10816.cpp
        boj_11000.cpp
        boj_11051.cpp
        boj_11279.cpp
        boj_11866.cpp
        boj_11866_2.cpp
        boj_1541.cpp
        boj_15649.cpp
        boj_15650.cpp
        boj_15828.cpp
        boj_1620.cpp
        boj_1874.cpp
        boj_1920.cpp
        boj_2178.cpp
        boj_24060.cpp
        boj_2504.cpp
        boj_2587.cpp
        boj_2667.cpp
        boj_4195.cpp
        boj_4949.cpp
        boj_9012.cpp
        boj_9375.cpp
        main.cpp
        permutation_combination.cpp)
